tests/neg/i4936b.scala
// scalac: -Xfatal-warnings

final object Foo // error
